--- a/package.json
+++ b/package.json
@@ -27,17 +27,15 @@
     "copy:build": "cpx \"src/**/*\" build",
     "copy:styles": "cpx \"build/**/*.css\" release",
     "watch": "webpack --display-error-details --watch",
-    "start": "webpack-dev-server",
+    "start": "webpack-dev-server -d",
     "start:host": "webpack-dev-server --host 0.0.0.0",
     "start:hmr": "webpack-dev-server --env.HMR",
     "release": "npm-run-all build:release",
-    "package":
-      "npm-run-all -s clean copy:build build:sass package:replace-scss package:aot build:package package:minify copy:styles clean:build",
+    "package": "npm-run-all -s clean copy:build build:sass package:replace-scss package:aot build:package package:minify copy:styles clean:build",
     "package:ts": "tsc --outDir release",
     "package:aot": "ngc -p tsconfig-aot.json",
     "package:replace-scss": "node ./config/replace-scss.js",
-    "package:minify":
-      "uglifyjs release/index.js --source-map --compress --mangle --screw-ie8 --output release/index.min.js",
+    "package:minify": "uglifyjs release/index.js --source-map --compress --mangle --screw-ie8 --output release/index.min.js",
     "deploy": "node ./config/deploy.js",
     "profile": "NODE_ENV=production webpack --profile --json > dist/stats.json"
   },
@@ -63,9 +61,15 @@
     "graph"
   ],
   "author": "Swimlane",
-  "contributors": ["Marjan Georgiev", "Jayson Harshbarger", "Austin McDaniel"],
+  "contributors": [
+    "Marjan Georgiev",
+    "Jayson Harshbarger",
+    "Austin McDaniel"
+  ],
   "license": "MIT",
-  "files": ["release"],
+  "files": [
+    "release"
+  ],
   "bugs": {
     "url": "https://github.com/swimlane/ngx-charts/issues"
   },
